# rockin-atwork-cfh-examples

./: .gitmodules  CMakeLists.txt  README.md
cfh_msgs/: CMakeLists.txt
libs/: CMakeLists.txt
protobuf/msgs/: CMakeLists.txt  Time.pb.cc  Time.pb.h
protobuf_comm/: CMakeLists.txt
src/: peer-beacon.cpp  peer.cpp
